crates/diman_unit_system/tests/compile_fail/type_mismatch_function_call.stderr
error[E0308]: mismatched types
 --> tests/compile_fail/type_mismatch_function_call.rs:7:17
  |
7 |     let x: () = meters.new(1.0f64).abs();
  |            --   ^^^^^^^^^^^^^^^^^^^^^^^^ expected `()`, found `Quantity<f64, Dimension>`
  |            |
  |            expected due to this
  |
  = note: expected unit type `()`
                found struct `Quantity<f64, Dimension>`
